--- a/APM-Start/src/app/products/product-edit/product-edit.component.html
+++ b/APM-Start/src/app/products/product-edit/product-edit.component.html
@@ -6,10 +6,14 @@
   <div class="card-body"
        *ngIf="product">
     <div class="wizard">
-      <a [routerLink]="['info']">
+      <a [routerLink]="['info']"
+         routerLinkActive="active">
+        <span [ngClass]="{'fa fa-exclamation': !isValid('info')}"></span>
         Basic Information
       </a>
-      <a [routerLink]="['tags']">
+      <a [routerLink]="['tags']"
+         routerLinkActive="active">
+        <span [ngClass]="{'fa fa-exclamation': !isValid('tags')}"></span>
         Search Tags
       </a>
     </div>
