--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -1,3 +1,14 @@
+<!-- <span class="loader"
+      *ngIf="loading"> </span> -->
+
+<div class="loading"
+     *ngIf="loading">
+  <div class="circle"></div>
+  <div class="circle"></div>
+  <div class="circle"></div>
+  <div class="circle"></div>
+</div>
+
 <div class="card">
   <div class="card-header">
     {{pageTitle}}
