--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -1,7 +1,7 @@
 <span class="fa fa-spinner spinner"
       *ngIf="loading"> </span>
 <nav class="navbar navbar-expand navbar-light bg-light">
-  <a class="navbar-brand">{{pageTitle}}</a>
+  <a class="navbar-brand">{{ pageTitle }}</a>
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link"
@@ -12,7 +12,7 @@
       <a class="nav-link"
          [routerLink]="['/products']"
          routerLinkActive="active"
-         [routerLinkActiveOptions]="{exact : true}">Product List</a>
+         [routerLinkActiveOptions]="{ exact: true }">Product List</a>
     </li>
     <li class="nav-item">
       <a class="nav-link"
@@ -26,7 +26,17 @@
       <a class="nav-link">Welcome {{ userName }}</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Show Messages</a>
+      <a class="nav-link"
+         (click)="displayMessages()"
+         *ngIf="!messageService.isDisplayed">Show Messages</a>
+      <!-- routerLinkActive="router-link-active">Show Messages</a> -->
+      <!-- [routerLink]="[{outlets: { popup: ['messages']}}]" -->
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"
+         (click)="hideMessages()"
+         *ngIf="messageService.isDisplayed">Hide Messages</a>
+      <!-- routerLinkActive="router-link-active">Show Messages</a> -->
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
@@ -40,7 +50,15 @@
     </li>
   </ul>
 </nav>
-<div class="container"
-     [@slideInAnimation]="o.isActivated ? o.activatedRoute :''">
-  <router-outlet #o="outlet"></router-outlet>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10"
+         [@slideInAnimation]="o.isActivated ? o.activatedRoute : ''">
+      <router-outlet #o="outlet"></router-outlet>
+    </div>
+    <div class="col-md-2">
+      <router-outlet name="popup">
+      </router-outlet>
+    </div>
+  </div>
 </div>
